Elemental stats switched to regular double stats